{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 69,
  "lineage": "d115e6d2-891d-2b80-c3a2-b0e08c8d03f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0393ee318b08f4511",
            "arn": "arn:aws:ec2:us-east-1:582634924370:instance/i-0cc505fd43c8cc84b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc505fd43c8cc84b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "var.key_name",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c927edc7d097e0c",
            "private_dns": "ip-192-168-101-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.101.149",
            "public_dns": "ec2-54-175-214-115.compute-1.amazonaws.com",
            "public_ip": "54.175.214.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ccc4584c18600455",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080c8caa87d736f58",
            "tags": {
              "Env": "Utrains_homework",
              "Name": "module_terraform_ec2"
            },
            "tags_all": {
              "Env": "Utrains_homework",
              "Name": "module_terraform_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ca157e156a0caa2"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:security-group/sg-08ca157e156a0caa2",
            "description": "allow traffic on 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ca157e156a0caa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "module_project_sg",
            "name_prefix": "",
            "owner_id": "582634924370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "module_project_sg",
              "Team": "Group10",
              "owner": "Koffi"
            },
            "tags_all": {
              "Name": "module_project_sg",
              "Team": "Group10",
              "owner": "Koffi"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:network-acl/acl-0aecf48cd813af4ed",
            "default_network_acl_id": "acl-0aecf48cd813af4ed",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aecf48cd813af4ed",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "582634924370",
            "subnet_ids": [
              "subnet-00ec1637672b4960b",
              "subnet-064a0503e1b001147",
              "subnet-080c8caa87d736f58",
              "subnet-0f9333dce51c303c0"
            ],
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:route-table/rtb-0f89c7be1f46ae11b",
            "default_route_table_id": "rtb-0f89c7be1f46ae11b",
            "id": "rtb-0f89c7be1f46ae11b",
            "owner_id": "582634924370",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:security-group/sg-02440c3d602a3d0fd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02440c3d602a3d0fd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "582634924370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:internet-gateway/igw-0e2dcf7461f6917f1",
            "id": "igw-0e2dcf7461f6917f1",
            "owner_id": "582634924370",
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e2dcf7461f6917f1",
            "id": "r-rtb-0da160c97e78242061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da160c97e7824206",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:route-table/rtb-026612fc5b18dd0a6",
            "id": "rtb-026612fc5b18dd0a6",
            "owner_id": "582634924370",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:route-table/rtb-042d8da7a9fb4cdbd",
            "id": "rtb-042d8da7a9fb4cdbd",
            "owner_id": "582634924370",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:route-table/rtb-0da160c97e7824206",
            "id": "rtb-0da160c97e7824206",
            "owner_id": "582634924370",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec93eec66acbc1a5",
            "route_table_id": "rtb-026612fc5b18dd0a6",
            "subnet_id": "subnet-064a0503e1b001147"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff43ad2b57827ffb",
            "route_table_id": "rtb-042d8da7a9fb4cdbd",
            "subnet_id": "subnet-0f9333dce51c303c0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0094b0e66e55e688d",
            "route_table_id": "rtb-0da160c97e7824206",
            "subnet_id": "subnet-080c8caa87d736f58"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0492cfcb2dad338a2",
            "route_table_id": "rtb-0da160c97e7824206",
            "subnet_id": "subnet-00ec1637672b4960b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:subnet/subnet-064a0503e1b001147",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a0503e1b001147",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582634924370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:subnet/subnet-0f9333dce51c303c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9333dce51c303c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582634924370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:subnet/subnet-080c8caa87d736f58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080c8caa87d736f58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582634924370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:subnet/subnet-00ec1637672b4960b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec1637672b4960b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582634924370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "vpc_id": "vpc-02a3a41de7166c6db"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582634924370:vpc/vpc-02a3a41de7166c6db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0aecf48cd813af4ed",
            "default_route_table_id": "rtb-0f89c7be1f46ae11b",
            "default_security_group_id": "sg-02440c3d602a3d0fd",
            "dhcp_options_id": "dopt-084ad9470ae4dfbee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a3a41de7166c6db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f89c7be1f46ae11b",
            "owner_id": "582634924370",
            "tags": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "vivian-vpc",
              "created-by": "vivian",
              "env": "devops",
              "team": "Group10"
            }
          }
        }
      ]
    }
  ]
}